; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo_gpu.c_reconfig.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo_gpu.c_reconfig.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo = type { %struct.gpu_priv* }
%struct.gpu_priv = type { i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 (%struct.TYPE_4__*)* }
%struct.mp_image_params = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vo*, %struct.mp_image_params*)* @reconfig to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @reconfig(%struct.vo* %0, %struct.mp_image_params* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.vo*, align 8
  %5 = alloca %struct.mp_image_params*, align 8
  %6 = alloca %struct.gpu_priv*, align 8
  store %struct.vo* %0, %struct.vo** %4, align 8
  store %struct.mp_image_params* %1, %struct.mp_image_params** %5, align 8
  %7 = load %struct.vo*, %struct.vo** %4, align 8
  %8 = getelementptr inbounds %struct.vo, %struct.vo* %7, i32 0, i32 0
  %9 = load %struct.gpu_priv*, %struct.gpu_priv** %8, align 8
  store %struct.gpu_priv* %9, %struct.gpu_priv** %6, align 8
  %10 = load %struct.gpu_priv*, %struct.gpu_priv** %6, align 8
  %11 = getelementptr inbounds %struct.gpu_priv, %struct.gpu_priv* %10, i32 0, i32 1
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i32 (%struct.TYPE_4__*)*, i32 (%struct.TYPE_4__*)** %15, align 8
  %17 = load %struct.gpu_priv*, %struct.gpu_priv** %6, align 8
  %18 = getelementptr inbounds %struct.gpu_priv, %struct.gpu_priv* %17, i32 0, i32 1
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  %20 = call i32 %16(%struct.TYPE_4__* %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %31

23:                                               ; preds = %2
  %24 = load %struct.vo*, %struct.vo** %4, align 8
  %25 = call i32 @resize(%struct.vo* %24)
  %26 = load %struct.gpu_priv*, %struct.gpu_priv** %6, align 8
  %27 = getelementptr inbounds %struct.gpu_priv, %struct.gpu_priv* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 8
  %29 = load %struct.mp_image_params*, %struct.mp_image_params** %5, align 8
  %30 = call i32 @gl_video_config(i32 %28, %struct.mp_image_params* %29)
  store i32 0, i32* %3, align 4
  br label %31

31:                                               ; preds = %23, %22
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @resize(%struct.vo*) #1

declare dso_local i32 @gl_video_config(i32, %struct.mp_image_params*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
